# next-signal

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
configs/: knowledge_taxonomy.yaml  models.yaml  schedules.yaml
configs/agents/: echo.yaml  knowledge_artifact_editor.yaml  knowledge_classifier.yaml  knowledge_frontmatter.yaml  knowledge_github_cleaner.yaml  knowledge_github_summary.yaml  (+5 more)
dashboard/: README.md  README.zh-CN.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
docs/: architecture.md  containerized-deployment.md  development.md  operations.md
openspec/: config.yaml  project.md
scripts/: bootstrap_db.py  container_bootstrap.sh
tests/: test_agent_loader.py  test_agent_loader_locale.py  test_cli_info_radar_analyze.py  test_cli_info_radar_recap.py  test_cli_knowledge_ingest.py  test_cli_knowledge_review.py  test_concurrency.py  test_config.py  test_context.py  test_core_db.py  test_folo_entry_get.py  test_folo_subscription_list.py  test_gbrain_search_routing.py  test_get_embedder.py  test_info_radar_analysis_fetch.py  test_info_radar_analysis_goals.py  test_info_radar_analysis_runner.py  test_info_radar_analysis_store.py  test_info_radar_analysis_tier1.py  test_info_radar_analysis_tier2.py  test_info_radar_loader.py  test_info_radar_parsers.py  test_info_radar_recap.py  test_info_radar_runner.py  test_info_radar_store.py  test_integrations_helpers.py  test_json_extract.py  test_knowledge_adapters.py  test_knowledge_artifact_editor.py  test_knowledge_artifacts.py  test_knowledge_classifier.py  test_knowledge_ingest_workflow.py  test_knowledge_manager_workflow_tool.py  test_knowledge_persist.py  test_knowledge_pipeline_artifact.py  test_knowledge_pipeline_fetch.py  test_knowledge_pipeline_workflow.py  test_knowledge_review.py  test_knowledge_review_store.py  test_knowledge_schemas.py  (+8 more)
(+312 files in other folders)
